# CourseWork

./: CMakeLists.txt  TokensImmutableGroup.cpp  TokensImmutableGroup.h  TokensMutableGroup.cpp  TokensMutableGroup.h  consts.cpp  consts.h  main.cpp  resources.txt  test_example.cpp  utils.cpp  utils.h  utils.txt  Использованная литература.txt  Кодирование.json  Курсовая_Отчёт.docx  Чтение_разбиение.json
classes/: TokensImmutableGroup.cpp  TokensImmutableGroup.h  TokensMutableGroup.cpp  TokensMutableGroup.h
consts/: consts.cpp  consts.h
groups/: groups.cpp  groups.h
tests/: tests.cpp  tests.h
utils/: utils.cpp  utils.h
